# ansible-ee

./: .gitignore  README.md  bindep.txt  ee_requirements.yml  execution-environment.yml  pyproject.toml  python_ansible.py  requirements.txt  requirements.yml
context/: Dockerfile
context/_build/: bindep_combined.txt  requirements.yml  requirements_combined.txt
project/: test.yml
