[tool.poetry]
name = "ansible-ee"
version = "0.1.0"
description = "ansible execution environment"
authors = ["Tobias Johansson <tobias.johansson@sdnit.se>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^3.3.0"
ansible-runner = "^2.0.0a1"
ansible-builder = "^0.6.0"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
